--- a/assest/css/weather-style.css
+++ b/assest/css/weather-style.css
@@ -60,18 +60,7 @@
   --transition-short: 100ms ease;
 }
 
-/* Light Mode Variables */
-[data-theme="light"] {
-  --background: #f8f8f8;
-  --on-background: #222;
-  --surface: #f0f0f0;
-  --on-surface: #333;
-  --on-surface-variant: #666;
-  --on-surface-variant-2: #888;
-  --outline: #ddd;
-}
-
-/* RESET */
+/* reset */
 *,
 *::before,
 *::after {
@@ -109,6 +98,9 @@ input {
 button {
   cursor: pointer;
 }
+/* sub,sup{
+  font-size: 0.75rem;
+} */
 sub {
   vertical-align: baseline;
 }
@@ -124,6 +116,8 @@ body {
   background-color: var(--background);
   color: var(--on-background);
   font-size: var(--body-3);
+  /* overflow: hidden; */
+  /* height: 200vh; */
 }
 :focus-visible {
   outline: 2px solid var(--white);
@@ -167,8 +161,7 @@ body {
   width: 1em;
   overflow: hidden;
 }
-
-/* COMPONENT */
+/* component */
 .container {
   max-width: 1600px;
   width: 100%;
@@ -243,6 +236,7 @@ body {
   padding-inline: 16px;
   border-radius: var(--radius-pill);
 }
+
 .btn-primary .span {
   font-weight: var(--weight-semiBold);
 }
@@ -319,8 +313,8 @@ body {
     opacity: 1;
   }
 }
+/* header */
 
-/* HEADER */
 .header .btn-primary .span {
   display: none;
 }
@@ -347,6 +341,8 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+  /* width: 100vh; */
+  /* width: 100svh; */
   background-color: var(--surface);
   color: var(--on-surface);
   -webkit-clip-path: circle(4% at calc(100% - 102px) 5%);
@@ -466,10 +462,12 @@ body {
   box-shadow: none;
 }
 
-/* MAIN */
+/* main */
+
 main {
   height: calc(100vh - 80px);
   height: calc(100svh - 80px);
+  /* overflow: hidden; */
 }
 article.container {
   position: relative;
@@ -501,8 +499,7 @@ article.container::before {
   -webkit-margin-after: 16px;
   margin-block-end: 16px;
 }
-
-/* CURRENT WEATHER CARD */
+/* current-weather-card */
 .current-weather-card .weapper {
   margin-block: 12px;
   display: flex;
@@ -536,7 +533,8 @@ article.container::before {
   color: var(--on-surface-variant);
 }
 
-/* HIGHLIGHTS */
+/* highlights */
+
 .forecast-card .title-2 {
   -webkit-margin-after: 0;
   margin-block-end: 0;
@@ -561,7 +559,8 @@ article.container::before {
   text-align: right;
 }
 
-/* HIGHLIGHTS */
+/* highlights */
+
 .highlights .m-icon {
   font-size: 3.2rem;
 }
@@ -638,7 +637,8 @@ article.container::before {
   margin-block-end: 4px;
 }
 
-/* HOURLY FORECAST */
+/* hourly forecast */
+
 .slider-container {
   overflow-x: auto;
   margin-inline: -16px;
@@ -671,7 +671,8 @@ article.container::before {
   margin-block: 12px;
 }
 
-/* FOOTER */
+/* footer */
+
 .footer,
 footer .body-3:last-child {
   display: flex;
@@ -700,7 +701,8 @@ footer .body-3:last-child {
   display: inline;
 }
 
-/* LOADING */
+/* loading */
+
 .loading {
   position: absolute;
   top: 0;
@@ -727,6 +729,7 @@ footer .body-3:last-child {
 }
 
 /* ERROR */
+
 .error-content {
   position: fixed;
   top: 0;
@@ -746,8 +749,10 @@ footer .body-3:last-child {
   margin-block-start: 20px;
 }
 
-/* MEDIA QUERIES */
+/* media queries */
+
 @media (min-width: 768px) {
+  /* reused */
   .container {
     padding: 24px;
   }
@@ -764,11 +769,15 @@ footer .body-3:last-child {
   .card-sm {
     padding: 20px;
     display: grid;
+    /* grid-template-columns: min-content 1fr; */
   }
   .badge {
     top: 20px;
     right: 20px;
   }
+
+  /* header */
+
   .header-actions {
     gap: 24px;
   }
@@ -782,6 +791,9 @@ footer .body-3:last-child {
     -webkit-clip-path: circle(3% at calc(100% - 273px) 6%);
     clip-path: circle(3% at calc(100% - 273px) 6%);
   }
+
+  /* main */
+
   main {
     height: calc(100vh - 96px);
     height: calc(100svh - 96px);
@@ -838,12 +850,12 @@ footer .body-3:last-child {
     padding: 16px;
   }
 }
-
 @media (min-width: 1200px) {
   :root {
     --headign: 8rem;
     --title-2: 2rem;
   }
+  /* reused */
   .container {
     padding: 40px;
   }
@@ -860,6 +872,9 @@ footer .body-3:last-child {
     -moz-column-gap: 24px;
     column-gap: 24px;
   }
+
+  /* header */
+
   .header .icon-btn {
     display: none;
   }
@@ -930,7 +945,7 @@ footer .body-3:last-child {
     overflow-y: overlay;
   }
   .search-view .view-list:empty {
-    min-height: 100px;
+    min-height: 120px;
   }
   .search-view .view-list::-webkit-scrollbar-button {
     height: 20px;
@@ -943,12 +958,14 @@ footer .body-3:last-child {
     -webkit-filter: drop-shadow(var(--shadow-2));
     filter: drop-shadow(var(--shadow-2));
   }
+
+  /* main */
+
   main {
     height: calc(100vh - 120px);
     height: calc(100svh - 120px);
   }
-
-article.container {
+  article.container {
     -webkit-padding-before: 0;
     padding-block-start: 0;
     grid-template-columns: 360px minmax(0, 1fr);
